--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -16,8 +16,11 @@
 
 \section{Experience}
 
-\cventry{2017--Present}{Compiler Engineer}{Groq, Inc.}{Portland, OR}
-  {}{Working on a compiler for tensorflow models, targeting a custom ASIC
+\cventry{2019--Present}{Infrastructure Engineer}{Stripe}{Portland, OR}
+  {}{Working on the \href{https://sorbet.org}{sorbet} typechecker for ruby.}
+
+\cventry{2017--2019}{Compiler Engineer}{Groq, Inc.}{Portland, OR}
+  {}{Worked on a compiler for tensorflow models, targeting a custom ASIC
   that accelerates inference. Focusing on compiler performance and optimization
   of results.}
 
