Add a reference to the salty paper

--- a/resume/publications.bib
+++ b/resume/publications.bib
@@ -1,3 +1,13 @@
+@INPROCEEDINGS{8793722,
+  author={Elliott, Trevor and Alshiekh, Mohammed and Humphrey, Laura R. and Pike, Lee and Topcu, Ufuk},
+  booktitle={2019 International Conference on Robotics and Automation (ICRA)}, 
+  title={Salty-A Domain Specific Language for GR(1) Specifications and Designs}, 
+  year={2019},
+  volume={},
+  number={},
+  pages={4545-4551},
+  doi={10.1109/ICRA.2019.8793722}}
+
 @inproceedings{hickey2014building,
   title={Building embedded systems with embedded DSLs},
   author={Hickey, Patrick C and Pike, Lee and Elliott, Trevor and Bielman, James and Launchbury, John},
