--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -1,5 +1,6 @@
 \documentclass[letter,10pt]{moderncv}
 \usepackage[scale=0.8]{geometry}
+\usepackage[backend=biber,sorting=ydnt,style=authoryear,maxnames=100]{biblatex}
 
 \moderncvstyle{casual}
 \moderncvcolor{black}
@@ -8,6 +9,29 @@
 \email{awesomelyawesome@gmail.com}
 \phone[mobile]{(503) 936-6575}
 \social[github]{elliottt}
+
+\renewbibmacro*{date}{}
+\renewbibmacro*{date+extrayear}{}
+\renewbibmacro*{issue+date}{}
+\newcommand*{\bibyear}{}
+
+\defbibenvironment{bibliography}
+  {\list
+    {\iffieldequals{year}{\bibyear}
+       {}
+       {\printfield{year}%
+        \savefield{year}{\bibyear}}}
+    {\setlength{\topsep}{0pt}%
+     \setlength{\labelwidth}{\hintscolumnwidth}%
+     \setlength{\labelsep}{\separatorcolumnwidth}%
+     \leftmargin\labelwidth%
+     \advance\leftmargin\labelsep}%
+     \sloppy\clubpenalty4000\widowpenalty4000}
+  {\endlist}
+{\item}
+
+\nocite{*}
+\addbibresource{publications.bib}
 
 \begin{document}
 
@@ -28,7 +52,7 @@
 
 \cventry{2017--2019}{Compiler Engineer}{Groq, Inc.}{Portland, OR}
   {}{Worked on a compiler for tensorflow models, targeting a custom ASIC
-  that accelerates inference. Focusing on compiler performance and optimization
+  that accelerates inference. Focused on compiler performance and optimization
   of results.}
 
 \cventry{2007--2017}{Engineer and Researcher}{Galois, Inc.}{Portland, OR}
@@ -84,8 +108,6 @@
   python, ruby, lua, assembly (x86, arm), coq, isabelle/hol, shell scripting}
 \cvitem{Tools}{z3, smt-lib, lldb, gdb, bazel, gnu make, vim/neovim}
 
-\nocite{*}
-\bibliographystyle{plain}
-\bibliography{publications}
+\printbibliography[title=Publications]
 
 \end{document}
