--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -39,7 +39,10 @@
 
 \section{Experience}
 
-\cventry{2019--Present}{Infrastructure Engineer}{Stripe}{Portland, OR}
+\cventry{2022-Present}{Principal Engineer}{Fastly}{Portland, OR}
+  {}{Working on the Compute@Edge team}
+
+\cventry{2019--2022}{Infrastructure Engineer}{Stripe}{Portland, OR}
   {}{Working on the \href{https://sorbet.org}{sorbet} typechecker and compiler for ruby.
   \begin{itemize}%
   \item Key contributor on the sorbet compiler, implementing optimizations and
