--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -40,7 +40,13 @@
 \section{Experience}
 
 \cventry{2022-Present}{Principal Engineer}{Fastly}{Portland, OR}
-  {}{Working on the Compute@Edge team}
+  {}{Working on the wasm team, contributing to a variety of projects centered around the running of WebAssembly
+  \begin{itemize}%
+  \item Contributor to wasamtime and the cranelift code generator
+  \item Contributor to the js-compute-sdk, as well as the viceroy local testing environment
+  \item Helped with the implementation and specification of wasi-preview2, and wasi-http
+  \item Participated in the RFC process for wasmtime to help set the direction for debugging
+  \end{itemize}}
 
 \cventry{2019--2022}{Infrastructure Engineer}{Stripe}{Portland, OR}
   {}{Working on the \href{https://sorbet.org}{sorbet} typechecker and compiler for ruby.
