--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -39,7 +39,10 @@
 
 \section{Experience}
 
-\cventry{2022-Present}{Principal Engineer}{Fastly}{Portland, OR}
+\cventry{2024-Present}{Infrastructure Engineer}{Stripe}{Portland, OR}
+  {}{Working on the \href{https://sorbet.org}{sorbet} typechecker for ruby.}
+
+\cventry{2022-2024}{Principal Engineer}{Fastly}{Portland, OR}
   {}{Working on the wasm team, contributing to a variety of projects centered around the running of WebAssembly
   \begin{itemize}%
   \item Contributor to wasamtime and the cranelift code generator
