Reorder resume sections

--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -95,6 +95,13 @@
 
 \cventry{2008}{B.S. Computer Science}{Portland State University}{Portland, OR}{}{}
 
+\section{Skills}
+\cvitem{Languages}{haskell, c/c++, rust, java, javascript, fsharp, ocaml,
+  python, ruby, lua, assembly (x86, arm), coq, isabelle/hol, shell scripting}
+\cvitem{Tools}{z3, smt-lib, lldb, gdb, bazel, gnu make, vim/neovim}
+
+\clearpage
+
 \section{Open Source Projects}
 \cvitem{\href{https://github.com/sorbet/sorbet}{sorbet}}
   {The sorbet typechecker and compiler for ruby}
@@ -114,11 +121,6 @@
   {An EDSL for generating textual llvm bitcode}
 \cvitem{\href{https://github.com/elliottt/huff}{huff}}
   {A fast-forward based classical planning EDSL}
-
-\section{Skills}
-\cvitem{Languages}{haskell, c/c++, rust, java, javascript, fsharp, ocaml,
-  python, ruby, lua, assembly (x86, arm), coq, isabelle/hol, shell scripting}
-\cvitem{Tools}{z3, smt-lib, lldb, gdb, bazel, gnu make, vim/neovim}
 
 \printbibliography[title=Publications]
 
